Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -52,21 +52,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calculating Euclidean Distance:\n",
+      "5.0\n",
+      "Calculating Manhattan Distance:\n",
+      "7.0\n",
+      "Calcuating Minkowski Distance (r=3):\n",
+      "4.497941445275415\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'NoneType' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-7c305ae83207>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     31\u001b[0m \u001b[0mtest\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m \u001b[0mtest\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msort\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 33\u001b[0;31m \u001b[0mtest_final\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtest\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msort\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: 'NoneType' object is not subscriptable"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
     "# Complete this function! \n",
-    "def distance():\n",
-    "    pass\n",
+    "def distance(a, b, r=2, verbose=True):\n",
+    "    if len(a) != len(b):\n",
+    "        raise ValueError(\"Both vectors must be of equal length!\")\n",
+    "    \n",
+    "    root = 1 / r\n",
+    "    running_total = 0\n",
+    "    \n",
+    "    if verbose:\n",
+    "        if r == 1:\n",
+    "            print(\"Calculating Manhattan Distance:\")\n",
+    "        elif r == 2:\n",
+    "            print('Calculating Euclidean Distance:')\n",
+    "        else:\n",
+    "            print(\"Calcuating Minkowski Distance (r={}):\".format(r))\n",
+    "    \n",
+    "    for ind, val_a in enumerate(a):\n",
+    "        val_b = b[ind]\n",
+    "        running_total += np.power(np.abs(val_a - val_b), r)\n",
+    "    \n",
+    "    return np.power(running_total, root)\n",
     "\n",
     "test_point_1 = (1, 2)\n",
     "test_point_2 = (4, 6)\n",
     "print(distance(test_point_1, test_point_2)) # Expected Output: 5.0\n",
     "print(distance(test_point_1, test_point_2, r=1)) # Expected Output: 7.0\n",
-    "print(distance(test_point_1, test_point_2, r=3)) # Expected Output: 4.497941445275415"
+    "print(distance(test_point_1, test_point_2, r=3)) # Expected Output: 4.497941445275415\n",
+    "\n",
+    "test = [-10, -4, -2, -4, -2, 0]\n",
+    "test.sort()\n",
+    "test_final = test.sort()[1:-1]\n"
    ]
   },
   {
@@ -163,7 +209,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
