Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -125,7 +125,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "   # Expected Output: 17.939899665271266"
+    "   # Expected Output: 17.939899665271266\n",
+    "\n",
+    "p1 = Point -2, -3.4, 4, 15, 7)\n",
+    "\n",
+    "Point 2: (3, -1.2, -2, -1, 7)"
    ]
   },
   {
