--- a/index.ipynb
+++ b/index.ipynb
@@ -129,7 +129,9 @@
     "\n",
     "p1 = (-2, -3.4, 4, 15, 7)\n",
     "\n",
-    "p2 = (3, -1.2, -2, -1, 7)"
+    "p2 = (3, -1.2, -2, -1, 7)\n",
+    "\n",
+    "distance(a, b, r=2, verbose=True)\n"
    ]
   },
   {
