Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -121,9 +121,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calculating Euclidean Distance:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "17.939899665271266"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "   # Expected Output: 17.939899665271266\n",
     "\n",
@@ -131,7 +149,7 @@
     "\n",
     "p2 = (3, -1.2, -2, -1, 7)\n",
     "\n",
-    "distance(a, b, r=2, verbose=True)\n"
+    "distance(p1, p2, r=2, verbose=True)\n"
    ]
   },
   {
