--- a/index.ipynb
+++ b/index.ipynb
@@ -170,7 +170,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "   # Expected Output: 20"
+    "   # Expected Output: 20\n",
+    "    "
    ]
   },
   {
