--- a/index.ipynb
+++ b/index.ipynb
@@ -174,7 +174,8 @@
     "p1 = [0, 0, 0, 7, 16, 2, 0, 1, 2, 1]\n",
     "\n",
     "p2 = [1, -1, 5, 7, 14, 3, -2, 3, 3, 6]\n",
-    "\n"
+    "\n",
+    "distance(p1, p2, 1, verbose=True)"
    ]
   },
   {
