--- a/index.ipynb
+++ b/index.ipynb
@@ -166,16 +166,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calculating Manhattan Distance:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "20.0"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "   # Expected Output: 20\n",
     "p1 = [0, 0, 0, 7, 16, 2, 0, 1, 2, 1]\n",
     "\n",
     "p2 = [1, -1, 5, 7, 14, 3, -2, 3, 3, 6]\n",
     "\n",
-    "distance(p1, p2, 1, verbose=True)"
+    "distance(p1, p2, 1)"
    ]
   },
   {
