--- a/index.ipynb
+++ b/index.ipynb
@@ -214,7 +214,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "   # Expected Output: 5.268789659188307"
+    "   # Expected Output: 5.268789659188307\n",
+    "    \n"
    ]
   },
   {
