--- a/index.ipynb
+++ b/index.ipynb
@@ -210,16 +210,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calcuating Minkowski Distance (r=3):\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "5.41589964155518"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "   # Expected Output: 5.268789659188307\n",
     "p1 = (-2, 7, 3.4) \n",
     "\n",
     "p2 = (3, 4, 1.5)\n",
     "\n",
-    "\n"
+    "\n",
+    "distance(p1, p2, 3)"
    ]
   },
   {
